# wows-extractor-gui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json  wows-depack.h
.github/workflows/: linux.yml  windows.yml
assets/: wows-extractor.desktop
compat/win32/: endian.h  libgen.h  open_memstream.h  unistd.h
compat/win32/linux/: limits.h
packaging/windows/: app.rc  installer.wxs
scripts/: build-windows.ps1  create-msi.ps1
src/: archivewidget.cpp  archivewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  shipviewerwidget.cpp  shipviewerwidget.h  viewer3d.qml
windows/compat/: fmemopen.h  unistd.h
windows/compat/sys/: endian.h
windows/packaging/: installer.wxs
windows/scripts/: build-windows.ps1  create-msi.ps1
